--- a/templates/app1/ques_view.html
+++ b/templates/app1/ques_view.html
@@ -24,6 +24,7 @@
                             <div id="ques_section">
                                 <h2 class="gp-ques-title">{{ ques.question }}</h2>
                                 <p class="gp-ques-date">{{ ques.created }}</p>
+                                <p class="gp-ques-date">Tags {{ ques.place }}</p>
                             </div>
                             <div id="edit_ques_form" style="display: none">
                                 form id {{ ques.id }}
