--- a/templates/app1/profile.html
+++ b/templates/app1/profile.html
@@ -146,6 +146,8 @@
 
 
 
+
+
                          {% if the_user.userprofile.image %}{{ the_user.userprofile.image.url }}{% else %}/media/default-placeholder.png{% endif %}"
                  style="display: none">
         </div>
@@ -407,7 +409,21 @@
                     </div>
                 {% endif %}
         </div>
-
+        <div class="ts-shared-stories">
+            {% if favourite_list %}
+                <p>Yout favourite places!</p>
+                {% for obj in favourite_list %}
+                    <a href="">{{ obj.place }}</a>
+                    <br>
+                {% endfor %}
+            {% else %}
+                <div class="gp-profile-story-list-item">
+                    <div class="gp-center">
+                        You have no favourite places!
+                    </div>
+                </div>
+            {% endif %}
+        </div>
 
     </div>
 
@@ -510,8 +526,6 @@
             return rgb;
 
         }
-
-
 
 
     </script>
